feat: implement AI orchestration workflow, tool integration, and OpenAPI documentation across microservices